# file-server-rs

./: .env  .env.example  .gitignore  Cargo.toml
migrations/2023-05-31-235835_setup_tables/: down.sql  up.sql
migrations/2023-06-01-205008_files_id_to_uuid/: down.sql  up.sql
migrations/2023-06-02-030918_setup_tables/: up.sql
src/: file_manager.rs  main.rs  models.rs  schema.rs
src/api/: controllers.rs
src/api/controllers/: files.rs  organizations.rs
