[package]
name = "fileserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "chrono", "uuid", "r2d2"] }
uuid = { version = "1.3.2", features = ["v4", "serde"] }
serde = { version = "1.0.163", features = ["derive"] }
actix-web = "4"
actix-files = "0.6.2"
dotenvy = "0.15"
chrono = { version = "0.4.24", features = ["serde"] }
glob = "0.3.1"
r2d2 = "0.8.10"
