[package]
name = "fileserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "chrono", "uuid", "r2d2"] }
uuid = { version = "1.3.2", features = ["v4", "serde"] }
serde = { version = "1.0.163", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
actix-web = "4"
actix-files = "0.6.2"
actix-multipart = "0.6.0"
actix-cors = "0.6.4"
tokio = "1.28.2"
futures-util = "0.3.28"
dotenvy = "0.15"
r2d2 = "0.8.10"
